# taxi_predection_fullstack_tarik_mulisic1

./: README.md  main.py  pyproject.toml  requirements.txt
src/taxipred/backend/: api.py  data_processing.py
src/taxipred/data/: cleaned_taxi_trip_pricing.csv  taxi_scaler.joblib
src/taxipred/frontend/: app.py
src/taxipred/model_development/: eda.ipynb  model_dev.ipynb  taxi_scaler.pkl
src/taxipred/utils/: constants.py
