[project]
name = "taxi-predection-fullstack-tarik-mulisic1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.128.0",
    "joblib>=1.5.3",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "streamlit>=1.52.2",
    "uvicorn[standard]>=0.40.0",
]
